# geo-munge

./: Cargo.toml  README.md
data/: input.csv
data/runs/: point_no_meta.json  run1.json  run2.json  run3.json
data/sample_csv/: stations.csv
data/sample_geojson/: sample.json
src/: args.rs  csv.rs  error.rs  lib.rs  main.rs  make_qt.rs
src/csv/: reader.rs  writer.rs
src/geojson/: mod.rs
src/kml/: mod.rs
src/qt/: csv.rs  datum.rs  geojson.rs  kml.rs  mod.rs  shapefile.rs
src/shp/: mod.rs
