[package]
name = "geo-munge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
geo = "0.23.0"
shapefile = { version = "0.3.0", features = ["geo-types"] }
geojson = { version = "0.24.0", features = ["geo-types"] }
serde = "~1.0"
serde_json = "~1.0"
kml = "0.5.0"
csv = "1.1"
rand = "0.8.5"
rayon = "1.6.1"
# Uses a local git repo version tag so we can work on qt improvements in parallel
quadtree = { git = "file:///home/bratter/code/quadtree/.git", tag = "v0.0.3" }

[profile.debug-release]
inherits = "release"
debug = true
