[package]
name = "geo-munge"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
geo = "^0.29"
shapefile = { version = "^0.6", features = ["geo-types"] }
geojson = { version = "^0.24", features = ["geo-types"] }
serde = "^1.0"
serde_json = "^1.0"
kml = "^0.8"
csv = "^1.3"
rand = "^0.9"
rayon = "^1.10"
# Uses a local git repo version tag so we can work on qt improvements in parallel
quadtree = { git = "file:///home/bratter/code/quadtree/.git", tag = "v0.0.4" }

[profile.debug-release]
inherits = "release"
debug = true
